--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/css/index.css
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/css/index.css
@@ -1,3 +1,40 @@
+/*Ordering*/
+
+#ordering {
+    width: 60%;
+    margin: auto;
+    text-align: center;
+    border-radius: 10px;
+    background-color: #d3d3d3;
+    opacity: 60%;
+    overflow: auto;
+}
+
+    #ordering div {
+        width: 60%;
+        margin: 20px auto 20px auto;
+        text-align: center;
+        background-color: #4682B4;
+        border-radius: 5px;
+        padding: 10px 25px 10px 25px;
+    }
+
+#ordering div label {
+    padding-right: 40px;
+    text-align: right;
+    color: black;
+
+}
+
+#ordering div select {
+
+
+}
+
+
+
+
+/*PopUP*/
 #popUp {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
