--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/css/index.css
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/css/index.css
@@ -17,9 +17,8 @@ body{
     margin: auto;
     text-align: center;
     border-radius: 10px;
-    background-color: rgb(211,211,211, 0.95);
+    background-color: rgb(211,211,211, 0.9);
     overflow: auto;
-    opacity: 95%;
 }
 #orderingPicture {
     width: 100%;
@@ -45,7 +44,6 @@ body{
             max-width: 50px;
             text-align: right;
             color: black;
-
         }
 
         #ordering div select {
@@ -58,31 +56,33 @@ body{
             position: relative;
             left: 25%;
             width: 50%;
-            background-color: #007500;
-            color: white;
+            background-color: #d3d3d3;
             border: 0px;
+            border-radius: 5px;
+            padding: 10px;
         }
-        #ordering div button:hover{
-            cursor:pointer;
-        }
+            #ordering div button:hover,
+            #ordering div button:focus {
+                cursor: pointer;
+            }
 
 
 
-
+/*Based on: https://www.w3schools.com/howto/howto_css_modals.asp*/
 /*PopUP*/
-#popUp {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
+#popUp { /*Background of the popup*/
+    display: none; /* Not showing by default */
+    position: fixed;
+    z-index: 1; 
+    padding-top: 100px;
     left: auto;
     right: auto;
     top: 0;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(325,325,325,0.6); /* Black w/ opacity */
+    overflow: auto; 
+    background-color: rgba(0,0,0,0.6); /* dark background with 0.6 opacity, 
+        opacity is not possible to use here since child will inherit the same opacity */
 }
 
 /* Modal Content */
@@ -90,14 +90,13 @@ body{
     background-color: #fefefe;
     margin: auto;
     padding: 20px;
-    border: 1px solid #4682B4;
+    border: 1px solid #d3d3d3;
     border-radius: 10px;
     width: 80%;
 }
 
 /* The Close Button */
 #popUp-content-close {
-    color: #aaaaaa;
     float: right;
     font-size: 28px;
     font-weight: bold;
@@ -105,7 +104,7 @@ body{
 
     #popUp-content-close:hover,
     #popUp-content-close:focus {
-        color: #000;
+        color: #d3d3d3;
         text-decoration: none;
         cursor: pointer;
     }
