--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/css/index.css
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/css/index.css
@@ -24,41 +24,52 @@ nav p {
 
 /*Ordering*/
 
-#content {
+#image {
     position: relative;
+    height:fit-content;
 }
 
-#ordering {
-    position: absolute;
-    top: 20%;
-    left:20%;
-    right:20%;
-    width: 60%;
-    margin: auto;
-    text-align: center;
-    border-radius: 10px;
-    background-color: rgb(211,211,211, 0.9);
-    overflow: auto;
-}
 #orderingPicture {
     width: 100%;
-    height:400px;
+    height: 300px;
     object-fit: cover;
     overflow: hidden;
 }
 
-    #ordering div {
-        width: 60%;
-        margin: 20px auto 20px auto;
+#content {
+    position: relative;
+    left: 20%;
+    right: 20%;
+    width: 60%;
+
+    margin-top:-100px; /* 1/3 of picture since image is 400px*/
+}
+
+#ordering {
+    width: 100%;
+    text-align: center;
+    border: 1px solid black;
+    border-radius: 10px;
+    background-color: white;
+}
+
+#ordering h3 {
+    margin: 10px 0 10px 0;
+}
+
+
+    #ordering #fromTo {
+        width: 30%;
+        margin: 20px 50px 20px 50px;
         text-align: center;
         background-color: rgb(70,130,180, 1);
         border-radius: 5px;
         padding: 10px 25px 10px 25px;
-        display:flex;
+        display: inline-block;
     }
    
         #ordering div label {
-            float:left;
+            float: left;
             width: 20%;
             padding-right: 20px;
             max-width: 50px;
@@ -68,9 +79,19 @@ nav p {
 
         #ordering div select {
             float: right;
-            width: 80%;
+            width: 70%;
             max-width: 300px;
         }
+
+    #ordering #order {
+        width: 30%;
+        margin: 20px 50px 20px 50px;
+        text-align: center;
+        background-color: rgb(70,130,180, 1);
+        border-radius: 5px;
+        padding: 10px 25px 10px 25px;
+        display: inline-block;
+    }
 
         #ordering div button {
             float: left;
