--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/css/index.css
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/css/index.css
@@ -1,152 +1,108 @@
-body{
+:root{
+    --black: rgb(10, 12, 16);
+    --blue-700: rgb(41, 50, 65);
+    --blue-700-v: 41, 50, 65;
+    --blue-500: rgb(61, 90, 128);
+    --blue-300: rgb(152, 193, 217);
+    --blue-100: rgb(224, 251, 252);
+    --white: rgb(246, 254, 254);
+    --accent-500: rgb(238, 108, 77);
+    
+    --borderradius-100: 7px;
+    
+    --shadow-700: 2px 2px 10px rgba(var(--blue-700-v), .5);
+
+    --padding-050: 0.5rem;
+    --padding-100: 1rem;
+    --padding-200: 2rem;
+    
+    --footer-height: 5rem;
+}
+
+html,
+body {
     margin:0;
+    padding:0;
+    height:100%;
+    font-family: Roboto, Arial, sans-serif;
 }
 
-
-nav {
-    height: 100px;
-    background-color: #395461;
-    margin: 0px;
+body {
+    display: flex;
+    flex-direction: column;
 }
+
+#nav {
+    width: 100%;
+    background: var(--blue-700);
+}
+
 .nav-logo{
-    height: inherit;
-    width: 150px;
-    background-color: white;
-    display: flex;
-
+    padding: var(--padding-050) var(--padding-200) ;
 }
 
-nav p {
-    color: white;
-    margin: 0;
-    display: flex;
+.nav-logo-img {
+    height: clamp(120px, 8rem, 10vh);;
 }
 
-/*Ordering*/
-
-#image {
+#hero {
     position: relative;
     height:fit-content;
 }
 
-#orderingPicture {
+.hero-img {
+    inset: 0;
+    margin: auto;
     width: 100%;
-    height: 300px;
+    height: 33vh;
     object-fit: cover;
     overflow: hidden;
 }
 
-#content {
-    position: relative;
-    left: 20%;
-    right: 20%;
-    width: 60%;
-
-    margin-top:-100px; /* 1/3 of picture since image is 400px*/
-}
-
-#ordering {
-    width: 100%;
-    text-align: center;
-    border: 1px solid black;
-    border-radius: 10px;
-    background-color: white;
-}
-
-#ordering h3 {
-    margin: 10px 0 10px 0;
-}
-
-
-    #ordering #fromTo {
-        width: 30%;
-        margin: 20px 50px 20px 50px;
-        text-align: center;
-        background-color: rgb(70,130,180, 1);
-        border-radius: 5px;
-        padding: 10px 25px 10px 25px;
-        display: inline-block;
-    }
-   
-        #ordering div label {
-            float: left;
-            width: 20%;
-            padding-right: 20px;
-            max-width: 50px;
-            text-align: right;
-            color: black;
-        }
-
-        #ordering div select {
-            float: right;
-            width: 70%;
-            max-width: 300px;
-        }
-
-    #ordering #order {
-        width: 30%;
-        margin: 20px 50px 20px 50px;
-        text-align: center;
-        background-color: rgb(70,130,180, 1);
-        border-radius: 5px;
-        padding: 10px 25px 10px 25px;
-        display: inline-block;
-    }
-
-        #ordering div button {
-            float: left;
-            position: relative;
-            left: 25%;
-            width: 50%;
-            background-color: #d3d3d3;
-            border: 0px;
-            border-radius: 5px;
-            padding: 10px;
-        }
-            #ordering div button:hover,
-            #ordering div button:focus {
-                cursor: pointer;
-            }
-
-
-
-/*Based on: https://www.w3schools.com/howto/howto_css_modals.asp*/
-/*PopUP*/
-#popUp { /*Background of the popup*/
-    display: none; /* Not showing by default */
-    position: fixed;
-    z-index: 1; 
-    padding-top: 100px;
-    left: auto;
-    right: auto;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; 
-    background-color: rgba(0,0,0,0.6); /* dark background with 0.6 opacity, 
-        opacity is not possible to use here since child will inherit the same opacity */
-}
-
-/* Modal Content */
-#popUp-content {
-    background-color: #fefefe;
+#orderbox {
+    width: clamp(20rem, 1100px , 90%);
     margin: auto;
-    padding: 20px;
-    border: 1px solid #d3d3d3;
-    border-radius: 10px;
-    width: 80%;
+    transform: translate(0, -40%);
+    border-radius: var(--borderradius-100);
+    box-shadow: var(--shadow-700);
+    background-color: white;
+    padding: var(--padding-200);
 }
 
-/* The Close Button */
-#popUp-content-close {
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
+#orderbox-params {
+    display: grid;
+    grid-template-columns: 2fr 2fr 2fr 1fr;
+    width: 100%;
 }
 
-    #popUp-content-close:hover,
-    #popUp-content-close:focus {
-        color: #d3d3d3;
-        text-decoration: none;
-        cursor: pointer;
-    }
+#orderbox-params > * {
+    margin-right: var(--padding-100);
+}
+
+#orderbox-params > * + * {
+    margin-left: var(--padding-100);
+}
+
+.orderbox-params-dropdown label {
+    text-align: start;
+    text-transform: uppercase;
+    color: var(--blue-500);
+}
+
+.orderbox-params-dropdown select{
+    width: 90%;
+    width: -moz-available;
+    width: available;
+}
+
+#footer {
+    margin-top: auto;
+    /*width: 100%;*/
+    background: var(--blue-700);
+    color: var(--blue-100);
+    text-align: center;
+}
+
+#footer > p {
+    padding: 1rem;
+}
