--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/css/home-made-calendar.css
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/css/home-made-calendar.css
@@ -23,14 +23,24 @@
     text-align: center;
     display: grid;
     grid-template-columns: repeat(7, 1fr);
-    grid-template-rows: repeat(5, 1fr);
+    grid-template-rows: auto;
 }
 
 .monthText {
     text-align: center;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-column: 1 / -1;
+}
+
+.text {
+    text-align: right;
+    padding-right: 5px;
+}
+
+.textYear{
+    text-align: left;
+
 }
 
 .arrow{
