--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/css/customelements/calendar.css
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/css/customelements/calendar.css
@@ -7,35 +7,37 @@
   margin: 0 50px 0 50px;
 }
 
-.calendar-titel {
-  margin: 0 auto 0 auto;
-  width: 100px;
-  color: blue;
-  font-size: 50px;
-}
-
-.calendar-titel::first-letter {
+.calendar-title {
+  margin: var(--padding-150) auto var(--padding-050) auto;
+  text-align: center;
   text-transform: uppercase;
+  font-size: var(--font-size-500);
+  font-family: var(--font-accent);
+  font-weight: 600;
+  color: var(--blue-700);
 }
 
 .month {
   width: 100%;
   text-align: center;
   display: grid;
-  grid-template-columns: repeat(7, 1fr);
   grid-template-rows: auto;
+  font-size: var(--font-size-400);
+}
+
+.month > .arrow {
+  padding: 0 var(--padding-050);
 }
 
 .monthText {
   text-align: center;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-column: 1 / -1;
+  display: flex;
+  margin-bottom: var(--padding-050);
 }
 
 .text {
-  text-align: right;
-  padding-right: 5px;
+  flex-basis: 100%;
+  text-align: center;
 }
 
 .textYear {
@@ -46,35 +48,55 @@
   cursor: pointer;
 }
 
+.calendar-cells {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+}
+
+.daysOfTheWeek {
+  font-weight: 600;
+}
+
 .day {
-  border-bottom: 1px solid gray;
-  border-right: 1px solid gray;
+  border-right: 1px solid rgba(var(--blue-700-v), 0.3);
+  border-collapse: collapse;
   text-align: center;
-  padding-top: 5px;
+  padding: var(--font-size-200);
   cursor: pointer;
 }
 
-.dayOfTheWeek {
+.day:first-of-type,
+.day:nth-of-type(8),
+.day:nth-of-type(15),
+.day:nth-of-type(22),
+.day:nth-of-type(29),
+.day:nth-of-type(36),
+.day:nth-of-type(43) {
+  border-left: 1px solid rgba(var(--blue-700-v), 0.3);
+}
+
+.emptyDay:last-of-type + .dayOfTheWeek {
   text-align: center;
   padding-top: 5px;
   font-weight: bold;
 }
 
 .notActiveDay {
-  color: lightgray;
+  color: rgba(var(--blue-700-v), 0.15);
   cursor: default;
   text-decoration: line-through;
 }
 
 .emptyDay {
-  border-bottom: 1px solid gray;
-  border-right: 1px solid gray;
+  border: none;
   text-align: center;
   padding-top: 5px;
 }
 
 .dayActive {
-  background-color: yellow;
+  background-color: var(--blue-700);
+  color: var(--blue-100);
+  font-weight: 600;
 }
 
 @media only screen and (max-width: 1000px) {
