--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/css/general.css
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/css/general.css
@@ -8,17 +8,19 @@
   --blue-100: rgb(224, 251, 252);
   --white: rgb(246, 254, 254);
   --accent-500: rgb(238, 108, 77);
+  --accent-500-v: 238, 108, 77;
 
   --borderradius-100: 7px;
 
   --shadow-700: 2px 2px 10px rgba(var(--blue-700-v), 0.5);
   --shadow-300: 0 0 10px rgba(var(--blue-300-v), 0.25);
 
-  --padding-050: 0.5rem;
+  --padding-025: calc(var(--padding-100) * 0.25);
+  --padding-050: calc(var(--padding-100) * 0.5);
   --padding-100: 1rem;
-  --padding-150: 1.5rem;
-  --padding-200: 2rem;
-  --padding-400: 4rem;
+  --padding-150: calc(var(--padding-100) * 1.5);
+  --padding-200: calc(var(--padding-100) * 2);
+  --padding-400: calc(var(--padding-100) * 4);
 
   --footer-height: 5rem;
 
@@ -57,17 +59,34 @@ main {
 #content {
   width: clamp(70%, 80rem, 90%);
   margin: auto;
+  margin-bottom: var(--padding-100);
 }
 
-button {
+h1,
+h2,
+h3 {
+  margin: var(--padding-100) 0 var(--padding-050);
+}
+
+button,
+input[type="submit"] {
   padding: var(--padding-100);
   background: var(--blue-700);
-  border: 2px solid rbga(var(--blue-700), 0.3);
+  border: 2px solid rgba(var(--blue-700-v), 0.3);
   color: var(--blue-100);
   text-transform: uppercase;
   font-family: var(--font-accent);
   font-size: var(--font-size-300);
   font-weight: 700;
+}
+
+button:hover,
+button:focus,
+input[type="submit"]:hover,
+input[type="submit"]:focus {
+  background: rgba(var(--blue-300-v), 0.15);
+  border: 2px solid var(--blue-700);
+  color: var(--blue-700);
 }
 
 /*Custom radio button*/
