Changed pointer for clickable elements

--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/css/general.css
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/css/general.css
@@ -78,6 +78,7 @@ input[type="submit"] {
   font-family: var(--font-accent);
   font-size: var(--font-size-300);
   font-weight: 700;
+  cursor: pointer;
 }
 
 button:hover,
