Fixed the problem with the calendar and some confirmation fixes

--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/css/general.css
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/css/general.css
@@ -62,6 +62,12 @@ main {
   margin-bottom: var(--padding-100);
 }
 
+#return-content {
+    width: clamp(70%, 80rem, 90%);
+    margin: auto;
+    margin-bottom: var(--padding-100);
+}
+
 h1,
 h2,
 h3 {
