--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/css/order.css
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/css/order.css
@@ -1,3 +1,30 @@
+#ticketInfo-trips {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.ticketInfo-info {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+}
+
+.ticketInfo-infoAll {
+  margin: var(--padding-025) var(--padding-050) var(--padding-050) 0;
+  align-self: center;
+}
+
+.ticketInfo-infoType {
+  text-transform: uppercase;
+  font-family: var(--font-accent);
+  font-weight: 600;
+  font-size: var(--font-size-400);
+  color: var(--blue-700);
+}
+
+.ticketInfo-infoData {
+  margin-left: var(--padding-100);
+}
+
 #orderForm {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -52,10 +79,25 @@
   #orderForm {
     grid-template-columns: 1fr 1fr;
   }
+  #ticketInfo-trips {
+    grid-template-columns: 1fr;
+  }
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 650px) {
   #orderForm {
     grid-template-columns: 1fr;
+  }
+
+  .ticketInfo-info {
+    grid-template-columns: 1fr;
+  }
+
+  .ticketInfo-infoType {
+    margin-bottom: 0;
+  }
+
+  .ticketInfo-infoData {
+    margin-left: 0;
   }
 }
