--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/css/customelements/customalert.css
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/css/customelements/customalert.css
@@ -2,23 +2,18 @@
     position: absolute;
     backdrop-filter: blur(5px);
     width: 100%;
-    height: 100%;
-    top: 0px;
-    left: 0px;
     z-index: 999;
 }
 
 #alertBox {
     position: absolute;
-    top: 0px;
     left: 50%;
     width: 300px;
     margin-left: -150px;
-    background-color: white;
+    background-color: var(--white);
     text-align: center;
-    margin-top: 50px;
+    margin-top: 75px;
     border: 2px solid rgba(var(--blue-700-v), 0.3);
-    background-position: 20px 30px;
     z-index: 1000;
 }
 
@@ -27,15 +22,14 @@
     font-size: 0.9em;
     background-color: var(--blue-700);
     color: #fff;
-    border-bottom: 1px solid #000;
+    border-bottom: 1px solid var(--black);
     padding: 2px 0 2px 5px;
-    text-align: center;
 }
 
 #alertBox p {
-    height: 50px;
-    padding-left: 5px;
-    font-size: 0.7em;
+    height: 75px;
+    padding: 5px;
+    font-size: 0.8em;
 }
 
 #alertBox #okBtn {
