Added a check for if you have chosen a roundtrip but you choose an inbound date - will now not link you to order.html but it will show an alert. Also added a timeout for order.js for a oneway trip. Also changed some css in the custom alert.

--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/css/customelements/customalert.css
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/css/customelements/customalert.css
@@ -6,7 +6,7 @@
 }
 
 #alertBox {
-    position: absolute;
+    position: fixed;
     left: 50%;
     width: 300px;
     margin-left: -150px;
@@ -44,7 +44,7 @@
     color: #fff;
     background-color: var(--blue-700);
     text-decoration: none;
-    font-size: 0.7em;
+    font-size: 0.8em;
 }
 
 #alertBox #okBtn:hover {
